Release 3.0.3 (2014-??-??)
~~~~~~~~~~~~~~~~~~~~~~~~~~

General:
- Remove translation hooks and dependencies [Patrick Uiterwijk]


Release 3.0.2 (2014-06-23)
~~~~~~~~~~~~~~~~~~~~~~~~~~

New:
- pySilvia renamed to webSilvia [Patrick Uiterwijk]
- Auto-submit the webSilvia request form [Patrick Uiterwijk]
- Add a list of required_credentials for webSilvia [Patrick Uiterwijk]

Fixes:
- Only returns the intermediate API auth step if it's multi-step [Patrick Uiterwijk]
- Returns the signed OpenID response instead of an exception [Patrick Uiterwijk]


Release 3.0.1 (2014-06-20)
~~~~~~~~~~~~~~~~~~~~~~~~~~

New:
- Added pySilvia [Patrick Uiterwijk]

Fixes:
- Uses complete_url_for so no http -> https issues arise [Patrick Uiterwijk]
- Reworded "Remember for 0 days" to "Remember for never" [Kevin Fenzi]
- Work with newer flask.babel packages as well [Patrick Uiterwijk]


Release 3.0.0 (2014-06-15)
~~~~~~~~~~~~~~~~~~~~~~~~~~

General:
- Rewrite [Patrick Uiterwijk]

New:
- Modular architecture [Patrick Uiterwijk]
- Multi-domain Persona [Patrick Uiterwijk]
- Multi-tab operation [Patrick Uiterwijk]

Fixes:
- Issues with session cookies [Patrick Uiterwijk]


Release 2.0.4 [Actinium] (2014-03-01)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Fixes:
- Does not delete session when it is still valid [Patrick Uiterwijk]
- Fixes an incorrect contains [Patrick Uiterwijk]
- Now actually signs the OpenID API response [Patrick Uiterwijk]
- Send nickname with OpenID API [Patrick Uiterwijk]
- Make the remote_addr check for sessions confiruable [Patrick Uiterwijk]


Release 2.0.3 [Astatine] (2014-02-14)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

Fixes:
- Add the magic value back for all group information [Patrick Uiterwijk]


Release 2.0.2 [Arsenic] (2014-02-14)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

New:
- Make it possible to configure the Persona identity issuer used in case of delegation [Patrick Uiterwijk]

Fixes:
- Only accept POST method for API [Pierre-Yves Chibon]