@@ -3,6 +3,7 @@ Release 3.0.3 (2014-??-??)
 
 General:
 - Remove translation hooks and dependencies [Patrick Uiterwijk]
+- Update webSilvia to protocol version request-1 [Patrick Uiterwijk]
 
 
 Release 3.0.2 (2014-06-23)
